# Vid_classification_tool

./: .gitignore  VCT.spec  build.bat  pyproject.toml
src/: main.py
src2/: main.py
src2/component/: edit.py  menubar.py  tag_dialog.py
src2/document/: Notes.md  libmpv.txt
src2/helper/: app_path_helper.py  config_helper.py  dark_theme.py  tag_db_helper.py
