[project]
name = "vid-classification-tool"
version = "0.1.0"
description = "A video tagging tool."
requires-python = ">=3.12"
dependencies = [
    "mutagen>=1.47.0",
    "pillow>=11.1.0",
    "pyinstaller>=6.12.0",
    "pyqtdarktheme-fork>=2.3.4",
    "pyside6>=6.8.2.1",
    "python-mpv>=1.0.7",
    "qtawesome>=1.3.1",
]
